--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -75,4 +75,5 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.1.0')
     implementation 'com.android.support:multidex:1.0.3'
     implementation("com.google.firebase:firebase-auth")
+    implementation "androidx.activity:activity:1.6.0-alpha05"
 }
