--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ dependencies:
   pinput: ^3.0.1
   chewie: ^1.5.0
   carousel_slider: ^4.2.1
+  connectivity: 
   # gradient_text:
   flutter_notification_channel:
   
